fuzzy y nuevas entradas

--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-02 20:02+0200\n"
+"PO-Revision-Date: 2021-10-18 20:50-0300\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es_AR\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../Doc/using/cmdline.rst:9
 msgid "Command line and environment"
@@ -573,7 +574,6 @@ msgstr ""
 "entre invocaciones repetidas de Python."
 
 #: ../Doc/using/cmdline.rst:323
-#, fuzzy
 msgid ""
 "Hash randomization is intended to provide protection against a denial-of-"
 "service caused by carefully-chosen inputs that exploit the worst case "
@@ -583,7 +583,7 @@ msgstr ""
 "La aleatorización de hash está diseñada para proporcionar protección contra "
 "una denegación de servicio causada por entradas cuidadosamente elegidas que "
 "aprovechan el peor rendimiento de una construcción de dictado, la "
-"complejidad de O(n-2).  Consulte http://www.ocert.org/advisories/"
+"complejidad de O(n\\ :sup:`2`) . Consulte http://www.ocert.org/advisories/"
 "ocert-2011-003.html para obtener más información."
 
 #: ../Doc/using/cmdline.rst:328
@@ -641,38 +641,37 @@ msgstr ""
 "La capa de texto de las secuencias stdout y stderr ahora no está en búfer."
 
 #: ../Doc/using/cmdline.rst:368
-#, fuzzy
 msgid ""
 "Print a message each time a module is initialized, showing the place "
 "(filename or built-in module) from which it is loaded.  When given twice (:"
 "option:`!-vv`), print a message for each file that is checked for when "
 "searching for a module.  Also provides information on module cleanup at exit."
 msgstr ""
-"Imprima un mensaje cada vez que se inicialice un módulo, mostrando el lugar "
-"(nombre de archivo o módulo integrado) desde el que se carga.  Cuando se le "
-"da dos veces (:option:`!-vv`), imprima un mensaje para cada archivo que se "
-"comprueba al buscar un módulo.  También proporciona información sobre la "
-"limpieza del módulo en la salida. Véase también :envvar:`PYTHONVERBOSE`."
+"Imprime un mensaje cada vez que se inicialice un módulo, mostrando el lugar "
+"(nombre de archivo o módulo integrado) desde el que se carga. Cuando se le "
+"pasa dos veces (:option:`!-vv`), imprime un mensaje para cada archivo que se "
+"comprueba al buscar un módulo. También proporciona información sobre la "
+"limpieza del módulo en la salida."
 
 #: ../Doc/using/cmdline.rst:373
 msgid ""
 "The :mod:`site` module reports the site-specific paths and :file:`.pth` "
 "files being processed."
 msgstr ""
+"El módulo :mod:`site` informa las rutas específicas del sitio y los "
+"archivos :file:`.pth` que se están procesando."
 
 #: ../Doc/using/cmdline.rst:377
 msgid "See also :envvar:`PYTHONVERBOSE`."
-msgstr ""
+msgstr "Véase también :envvar:`PYTHONVERBOSE`."
 
 #: ../Doc/using/cmdline.rst:383
-#, fuzzy
 msgid ""
 "Warning control. Python's warning machinery by default prints warning "
 "messages to :data:`sys.stderr`."
 msgstr ""
 "Control de advertencia.  La maquinaria de advertencia de Python por defecto "
-"imprime mensajes de advertencia en :data:`sys.stderr`.  Un mensaje de "
-"advertencia típico tiene el siguiente formulario:"
+"imprime mensajes de advertencia en :data:`sys.stderr`."
 
 #: ../Doc/using/cmdline.rst:386 ../Doc/using/cmdline.rst:733
 msgid ""
@@ -685,19 +684,18 @@ msgstr ""
 "aquellas que de otro modo se ignoran de forma predeterminada)::"
 
 #: ../Doc/using/cmdline.rst:397
-#, fuzzy
 msgid ""
 "The action names can be abbreviated as desired and the interpreter will "
 "resolve them to the appropriate action name. For example, ``-Wi`` is the "
 "same as ``-Wignore``."
 msgstr ""
-"Los nombres de acción se pueden abreviar como se desee (por ejemplo, ``-"
-"Wi``, ``-Wd``, ``-Wa``, ``-We``) y el intérprete los resolverá con el nombre "
-"de acción adecuado."
+"Los nombres de acción se pueden abreviar como se desee y el intérprete los "
+"resolverá con el nombre de acción adecuado. Por ejemplo, ``-Wi`` es lo mismo "
+"que ``-Wignore``."
 
 #: ../Doc/using/cmdline.rst:401
 msgid "The full form of argument is::"
-msgstr ""
+msgstr "La forma completa del argumento es::"
 
 #: ../Doc/using/cmdline.rst:405
 msgid ""
@@ -705,18 +703,25 @@ msgid ""
 "example ``-W ignore::DeprecationWarning`` ignores all DeprecationWarning "
 "warnings."
 msgstr ""
+"Los campos vacíos cuadran con todos los valores; los campos vacíos finales "
+"pueden omitirse. Por ejemplo, ``-W ignore::DeprecationWarning`` ignora todas "
+"las advertencias de DeprecationWarning."
 
 #: ../Doc/using/cmdline.rst:409
 msgid ""
 "The *action* field is as explained above but only applies to warnings that "
 "match the remaining fields."
 msgstr ""
+"El campo *action* es como se explicó anteriormente, pero solo se aplica a "
+"las advertencias que coinciden con los campos restantes."
 
 #: ../Doc/using/cmdline.rst:412
 msgid ""
 "The *message* field must match the whole warning message; this match is case-"
 "insensitive."
 msgstr ""
+"El campo *message* debe coincidir con el mensaje de advertencia completo; "
+"esta coincidencia no distingue entre mayúsculas y minúsculas."
 
 #: ../Doc/using/cmdline.rst:415
 msgid ""
@@ -725,21 +730,29 @@ msgid ""
 "the actual warning category of the message is a subclass of the specified "
 "warning category."
 msgstr ""
+"El campo *category* coincide con la categoría de advertencia (por ej. "
+"``DeprecationWarning``). Debe ser un nombre de clase; la coincidencia prueba "
+"si la categoría de advertencia real del mensaje es una subclase de la "
+"categoría de advertencia especificada."
 
 #: ../Doc/using/cmdline.rst:420
 msgid ""
 "The *module* field matches the (fully-qualified) module name; this match is "
 "case-sensitive."
 msgstr ""
+"El campo *module* coincide con el nombre de dominio completo del módulo; "
+"esta coincidencia distingue entre mayúsculas y minúsculas."
 
 #: ../Doc/using/cmdline.rst:423
 msgid ""
 "The *lineno* field matches the line number, where zero matches all line "
 "numbers and is thus equivalent to an omitted line number."
 msgstr ""
+"El campo *lineno* coincide con el número de línea, donde cero corresponde a "
+"todos los números de línea y, por lo tanto, es equivalente a número de línea "
+"omitido."
 
 #: ../Doc/using/cmdline.rst:426
-#, fuzzy
 msgid ""
 "Multiple :option:`-W` options can be given; when a warning matches more than "
 "one option, the action for the last matching option is performed. Invalid :"
@@ -748,12 +761,11 @@ msgid ""
 msgstr ""
 "Se pueden dar varias opciones :option:`-W`; cuando una advertencia coincide "
 "con más de una opción, se realiza la acción para la última opción de "
-"coincidencia.  No se omiten las opciones :option:`-W` (aunque se imprime un "
-"mensaje de advertencia sobre opciones no válidas cuando se emite la primera "
-"advertencia)."
+"coincidencia. Las opciones invalidas :option:`-W` son ignoradas (aunque se "
+"imprime un mensaje de advertencia sobre opciones no válidas cuando se emite "
+"la primera advertencia)."
 
 #: ../Doc/using/cmdline.rst:431
-#, fuzzy
 msgid ""
 "Warnings can also be controlled using the :envvar:`PYTHONWARNINGS` "
 "environment variable and from within a Python program using the :mod:"
@@ -762,7 +774,9 @@ msgid ""
 msgstr ""
 "Las advertencias también se pueden controlar utilizando la variable de "
 "entorno :envvar:`PYTHONWARNINGS` y desde un programa Python utilizando el "
-"módulo :mod:`warnings`."
+"módulo :mod:`warnings`. Por ejemplo, la función :func:`warnings."
+"filterwarnings` puede ser usarse con una expresión regular en el mensaje de "
+"advertencia."
 
 #: ../Doc/using/cmdline.rst:436 ../Doc/using/cmdline.rst:744
 msgid ""
@@ -794,7 +808,6 @@ msgid "``-X faulthandler`` to enable :mod:`faulthandler`;"
 msgstr "``-X faulthandler`` para habilitar :mod:`faulthandler`;"
 
 #: ../Doc/using/cmdline.rst:451
-#, fuzzy
 msgid ""
 "``-X showrefcount`` to output the total reference count and number of used "
 "memory blocks when the program finishes or after each statement in the "
@@ -804,7 +817,7 @@ msgstr ""
 "``-X showrefcount`` para generar el recuento total de referencias y el "
 "número de bloques de memoria utilizados cuando finalice el programa o "
 "después de cada instrucción en el intérprete interactivo. Esto sólo funciona "
-"en compilaciones de depuración."
+"en :ref:`compilaciones de depuración <debug-build>`."
 
 #: ../Doc/using/cmdline.rst:455
 msgid ""
@@ -851,6 +864,9 @@ msgid ""
 "explicitly disables :ref:`Python UTF-8 Mode <utf8-mode>` (even when it would "
 "otherwise activate automatically)."
 msgstr ""
+"``-X utf8`` habilita el ref:`modo Python UTF-8 <utf8-mode>`. ``-X "
+"utf8=0``desactiva explícitamente el ref:`modo Python UTF-8 <utf8-mode>` "
+"(incluso cuando al contrario se activaría automáticamente)."
 
 #: ../Doc/using/cmdline.rst:471
 msgid ""
@@ -868,6 +884,9 @@ msgid ""
 "locale-specific default encoding is used for opening files. See also :envvar:"
 "`PYTHONWARNDEFAULTENCODING`."
 msgstr ""
+"``-X warn_default_encoding`` emite un :class:`EncodingWarning` cuando se usa "
+"la codificación predeterminada específica de la configuración regional para "
+"abrir archivos. Vea también :envvar:`PYTHONWARNDEFAULTENCODING`."
 
 #: ../Doc/using/cmdline.rst:478
 msgid ""
@@ -918,9 +937,8 @@ msgid "The ``-X showalloccount`` option has been removed."
 msgstr "Se ha eliminado la opción ``-X showalloccount``."
 
 #: ../Doc/using/cmdline.rst:506
-#, fuzzy
 msgid "The ``-X warn_default_encoding`` option."
-msgstr "La opción ``-X faulhandler``."
+msgstr "La opción ``-X warn_default_encoding``."
 
 #: ../Doc/using/cmdline.rst:510
 msgid "The ``-X oldparser`` option."
@@ -1138,13 +1156,12 @@ msgstr ""
 "v` varias veces."
 
 #: ../Doc/using/cmdline.rst:640
-#, fuzzy
 msgid ""
 "If this is set, Python ignores case in :keyword:`import` statements.  This "
 "only works on Windows and macOS."
 msgstr ""
 "Si se establece, Python omite mayúsculas y minúsculas en las instrucciones :"
-"keyword:`import`.  Esto sólo funciona en Windows y OS X."
+"keyword:`import`. Esto sólo funciona en Windows y macOS."
 
 #: ../Doc/using/cmdline.rst:646
 msgid ""
@@ -1261,14 +1278,13 @@ msgstr ""
 "para ``python setup.py install --user``."
 
 #: ../Doc/using/cmdline.rst:722
-#, fuzzy
 msgid ""
 "If this environment variable is set, ``sys.argv[0]`` will be set to its "
 "value instead of the value got through the C runtime.  Only works on macOS."
 msgstr ""
 "Si se establece esta variable de entorno, ``sys.argv[0]`` se establecerá en "
 "su valor en lugar del valor conseguido a través del tiempo de ejecución de "
-"C.  Sólo funciona en Mac OS X."
+"C. Sólo funciona en macOS."
 
 #: ../Doc/using/cmdline.rst:728
 msgid ""
@@ -1368,7 +1384,7 @@ msgstr ""
 
 #: ../Doc/using/cmdline.rst:802
 msgid "Install :ref:`debug hooks <pymem-debug-hooks>`:"
-msgstr ""
+msgstr "Instalar :ref:`enlaces de depuración <pymem-debug-hooks>`:"
 
 #: ../Doc/using/cmdline.rst:804
 msgid ""
@@ -1423,17 +1439,16 @@ msgstr ""
 "versión. Ahora no tiene ningún efecto si se establece en una cadena vacía."
 
 #: ../Doc/using/cmdline.rst:832
-#, fuzzy
 msgid ""
 "If set to a non-empty string, the default :term:`filesystem encoding and "
 "error handler` mode will revert to their pre-3.6 values of 'mbcs' and "
 "'replace', respectively.  Otherwise, the new defaults 'utf-8' and "
 "'surrogatepass' are used."
 msgstr ""
-"Si se establece en una cadena no vacía, el modo de codificación y errores "
-"del sistema de archivos predeterminado volverá a sus valores pre-3.6 de "
-"`mbcs` y `replace`, respectivamente. De lo contrario, se utilizan los nuevos "
-"valores predeterminados `utf-8` y `surrogatepass`."
+"Si se establece en una cadena no vacía, el :term:`filesystem encoding and "
+"error handler` predeterminado volverá a sus valores pre-3.6 de `mbcs` y "
+"`replace`, respectivamente. De lo contrario, se utilizan los nuevos valores "
+"predeterminados 'utf-8' y 'surrogatepass'."
 
 #: ../Doc/using/cmdline.rst:837
 msgid ""
@@ -1604,10 +1619,13 @@ msgstr ""
 #: ../Doc/using/cmdline.rst:921
 msgid "If set to ``1``, enable the :ref:`Python UTF-8 Mode <utf8-mode>`."
 msgstr ""
+"Si se establece en ``1``, habilita el :ref:`modo Python UTF-8 <utf8-mode>`."
 
 #: ../Doc/using/cmdline.rst:923
 msgid "If set to ``0``, disable the :ref:`Python UTF-8 Mode <utf8-mode>`."
 msgstr ""
+"Si se establece en ``0``, deshabilita el :ref:`modo Python UTF-8 <utf8-"
+"mode>`."
 
 #: ../Doc/using/cmdline.rst:925
 msgid ""
@@ -1622,24 +1640,27 @@ msgid ""
 "If this environment variable is set to a non-empty string, issue a :class:"
 "`EncodingWarning` when the locale-specific default encoding is used."
 msgstr ""
+"Si esta variable de entorno se establece como una cadena de caracteres no "
+"vacía, emite un :class:`EncodingWarning` cuando se utilice la codificación "
+"predeterminada específica de la configuración regional."
 
 #: ../Doc/using/cmdline.rst:935
 msgid "See :ref:`io-encoding-warning` for details."
-msgstr ""
+msgstr "Ver :ref:`io-encoding-warning` para más detalles."
 
 #: ../Doc/using/cmdline.rst:941
 msgid "Debug-mode variables"
 msgstr "Variables de modo de depuración"
 
 #: ../Doc/using/cmdline.rst:945
-#, fuzzy
 msgid "If set, Python will print threading debug info into stdout."
 msgstr ""
-"Si se establece, Python imprimirá información de depuración de subprocesos."
+"Si se establece, Python imprimirá información de depuración de subprocesos "
+"en stdout."
 
 #: ../Doc/using/cmdline.rst:947
 msgid "Need a :ref:`debug build of Python <debug-build>`."
-msgstr ""
+msgstr "Necesita :ref:`compilación de depuración de Python <debug-build>`."
 
 #: ../Doc/using/cmdline.rst:954
 msgid ""
@@ -1650,12 +1671,11 @@ msgstr ""
 "después de apagar el intérprete."
 
 #: ../Doc/using/cmdline.rst:957
-#, fuzzy
 msgid ""
 "Need Python configured with the :option:`--with-trace-refs` build option."
 msgstr ""
-"Necesita Python configurado con la opción de compilación ``--with-trace-"
-"refs``."
+"Necesita Python configurado con la opción de compilación :option:`--with-"
+"trace-refs`."
 
 #~ msgid ""
 #~ "``-X showalloccount`` to output the total count of allocated objects for "
