--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-10-18 20:50-0300\n"
+"PO-Revision-Date: 2021-10-18 21:15-0300\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es_AR\n"
 "Language-Team: python-doc-es\n"
@@ -864,8 +864,8 @@ msgid ""
 "explicitly disables :ref:`Python UTF-8 Mode <utf8-mode>` (even when it would "
 "otherwise activate automatically)."
 msgstr ""
-"``-X utf8`` habilita el ref:`modo Python UTF-8 <utf8-mode>`. ``-X "
-"utf8=0``desactiva explícitamente el ref:`modo Python UTF-8 <utf8-mode>` "
+"``-X utf8`` habilita el :ref:`modo Python UTF-8 <utf8-mode>`. ``-X "
+"utf8=0``desactiva explícitamente el :ref:`modo Python UTF-8 <utf8-mode>` "
 "(incluso cuando al contrario se activaría automáticamente)."
 
 #: ../Doc/using/cmdline.rst:471
