Doc: change devuelve to retorna
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/c-api/weakref.po
+++ b/c-api/weakref.po
@@ -117,7 +117,7 @@ msgid ""
 "except when it cannot be destroyed before the last usage of the borrowed "
 "reference."
 msgstr ""
-"Esta función devuelve una referencia :term:`borrowed reference` al objeto "
+"Esta función retorna una referencia :term:`borrowed reference` al objeto "
 "referenciado. Esto significa que siempre debe llamar a :c:func:`Py_INCREF` "
 "sobre el objeto, excepto cuando no pueda ser destruido antes del último uso "
 "de la referencia prestada."
