--- a/c-api/weakref.po
+++ b/c-api/weakref.po
@@ -11,16 +11,17 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-01 17:38+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2021-10-18 19:38+0200\n"
+"Last-Translator: Diego Cristóbal Herreros <diecristher@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es (https://mail.python.org/mailman3/lists/docs-es."
 "python.org)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/weakref.rst:6
 msgid "Weak Reference Objects"
@@ -116,6 +117,10 @@ msgid ""
 "except when it cannot be destroyed before the last usage of the borrowed "
 "reference."
 msgstr ""
+"Esta función retorna una referencia :term:`borrowed reference` al objeto "
+"referenciado. Esto significa que siempre debe llamar a :c:func:`Py_INCREF` "
+"sobre el objeto, excepto cuando no pueda ser destruido antes del último uso "
+"de la referencia prestada."
 
 #: ../Doc/c-api/weakref.rst:69
 msgid ""
