--- a/glossary.po
+++ b/glossary.po
@@ -147,8 +147,8 @@ msgid ""
 "`annotations-howto` for best practices on working with annotations."
 msgstr ""
 "Vea :term:`variable annotation`, :term:`function annotation`, :pep:`484` y :"
-"pep:`526`, los cuales describen esta funcionalidad. También puedes ver"
-" :ref:`annotations-howto` para mejores prácticas de cómo trabajar con anotaciones"
+"pep:`526`, los cuales describen esta funcionalidad. También puedes ver :ref:"
+"`annotations-howto` para mejores prácticas de cómo trabajar con anotaciones"
 
 #: ../Doc/glossary.rst:62
 msgid "argument"
@@ -1079,7 +1079,8 @@ msgid ""
 "working with annotations."
 msgstr ""
 "Vea :term:`variable annotation` y :pep:`484`, que describen esta "
-"funcionalidad. También puede ver :ref:`annotations-howto` para mejores prácticas sobre como trabajar con anotaciones."
+"funcionalidad. También puede ver :ref:`annotations-howto` para mejores "
+"prácticas sobre como trabajar con anotaciones."
 
 #: ../Doc/glossary.rst:462
 msgid "__future__"
@@ -2783,7 +2784,8 @@ msgid ""
 "working with annotations."
 msgstr ""
 "Vea :term:`function annotation`, :pep:`484` y :pep:`526`, los cuales "
-"describen esta funcionalidad. También puede ver :ref:`annotations-howto` para mejores prácticas sobre como trabajar con anotaciones."
+"describen esta funcionalidad. También puede ver :ref:`annotations-howto` "
+"para mejores prácticas sobre como trabajar con anotaciones."
 
 #: ../Doc/glossary.rst:1221
 msgid "virtual environment"
