--- a/c-api/number.po
+++ b/c-api/number.po
@@ -379,7 +379,7 @@ msgid ""
 "have been an instance of a subclass of ``int``."
 msgstr ""
 "El resultado siempre tiene el tipo exacto :class:`int`. Anteriormente, el resultado podía "
-"han sido un ejemplo de una subclase de ``int``."
+"ser una instancia de una subclase de ``int``."
 
 #: ../Doc/c-api/number.rst:266
 msgid ""
