--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -1965,7 +1965,7 @@ msgid ""
 msgstr ""
 "Las comparaciones de ordenación (``<``, ``<=``, ``>``, ``>=``) entre "
 "fracciones y números complejos ahora lanzan un :exc:`TypeError`. Esto "
-"corrige un descuido, haciendo que la :clase:`~fracciones.Fracción` coincida "
+"corrige un descuido, haciendo que la :class:`~fractions.Fraction` coincida "
 "con los otros tipos numéricos."
 
 #: ../Doc/whatsnew/2.7.rst:1258
@@ -2159,7 +2159,7 @@ msgstr ""
 "Un pequeño cambio resultante: la clase :class:`io.TextIOBase` tiene ahora un "
 "atributo :attr:`errors` que da la configuración de error utilizada para los "
 "errores de codificación y decodificación (uno de ``’strict’``, "
-"``’replace’``, ``’ignore’`)."
+"``’replace’``, ``'ignore'``)."
 
 #: ../Doc/whatsnew/2.7.rst:1355
 msgid ""
@@ -3133,7 +3133,7 @@ msgid ""
 "resulting output will be discarded; on failure, the buffered output will be "
 "displayed."
 msgstr ""
-": opción: `-b<unittest -b> `o: opción:`! - buffer` almacenará en búfer la "
+":option:`-b <unittest -b>` o :option:`!--buffer` almacenará en búfer la "
 "salida estándar y los flujos de error estándar durante cada prueba. Si la "
 "prueba pasa, se descartará cualquier salida resultante; en caso de falla, se "
 "mostrará la salida almacenada en búfer."
@@ -3555,9 +3555,8 @@ msgid ""
 msgstr ""
 "El código de ElementTree para convertir árboles a una cadena ha sido "
 "significativamente rediseñado, haciéndolo aproximadamente dos veces más "
-"rápido en muchos casos.  Los <xml.etree.ElementTree.ElementTree."
-"write>métodos</xml.etree.ElementTree.ElementTree.write>:meth:`ElementTree."
-"write() <xml.etree.ElementTree.ElementTree.write>` y :meth:`Element.write` "
+"rápido en muchos casos.  Los :meth:"
+"`ElementTree.write() <xml.etree.ElementTree.ElementTree.write>` y :meth:`Element.write` "
 "tienen ahora un parámetro *method* que puede ser \"xml\" (el "
 "predeterminado), \"html\" o \"text\".  El modo HTML mostrará los elementos "
 "vacíos como ``<empty></empty>`` en lugar de ``<empty/>``, y el modo texto "
@@ -3565,7 +3564,7 @@ msgstr ""
 "atributo :attr:`tag` de un elemento como ``None`` pero dejas sus hijos en su "
 "sitio, el elemento será omitido cuando el árbol sea escrito, por lo que no "
 "necesitarás hacer un reordenamiento más extenso para eliminar un solo "
-"elemento.</xml.etree.ElementTree.ElementTree.write>"
+"elemento."
 
 #: ../Doc/whatsnew/2.7.rst:2039
 msgid ""
