--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -3555,16 +3555,15 @@ msgid ""
 msgstr ""
 "El código de ElementTree para convertir árboles a una cadena ha sido "
 "significativamente rediseñado, haciéndolo aproximadamente dos veces más "
-"rápido en muchos casos.  Los :meth:"
-"`ElementTree.write() <xml.etree.ElementTree.ElementTree.write>` y :meth:`Element.write` "
-"tienen ahora un parámetro *method* que puede ser \"xml\" (el "
-"predeterminado), \"html\" o \"text\".  El modo HTML mostrará los elementos "
-"vacíos como ``<empty></empty>`` en lugar de ``<empty/>``, y el modo texto "
-"saltará los elementos y sólo mostrará los trozos de texto.  Si estableces el "
-"atributo :attr:`tag` de un elemento como ``None`` pero dejas sus hijos en su "
-"sitio, el elemento será omitido cuando el árbol sea escrito, por lo que no "
-"necesitarás hacer un reordenamiento más extenso para eliminar un solo "
-"elemento."
+"rápido en muchos casos.  Los :meth:`ElementTree.write() <xml.etree."
+"ElementTree.ElementTree.write>` y :meth:`Element.write` tienen ahora un "
+"parámetro *method* que puede ser \"xml\" (el predeterminado), \"html\" o "
+"\"text\".  El modo HTML mostrará los elementos vacíos como ``<empty></"
+"empty>`` en lugar de ``<empty/>``, y el modo texto saltará los elementos y "
+"sólo mostrará los trozos de texto.  Si estableces el atributo :attr:`tag` de "
+"un elemento como ``None`` pero dejas sus hijos en su sitio, el elemento será "
+"omitido cuando el árbol sea escrito, por lo que no necesitarás hacer un "
+"reordenamiento más extenso para eliminar un solo elemento."
 
 #: ../Doc/whatsnew/2.7.rst:2039
 msgid ""
