fix hyperlink mismatch

--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -4737,7 +4737,7 @@ msgid ""
 "simple directions on how to install them on that platform (usually using the "
 "system package manager)."
 msgstr ""
-"Como se discute en el PEP`__, los empaquetadores de plataformas pueden optar "
+"`Como se discute en el PEP`__, los empaquetadores de plataformas pueden optar"
 "por no instalar estos comandos por defecto, siempre y cuando, cuando se "
 "invoquen, proporcionen instrucciones claras y sencillas sobre cómo "
 "instalarlos en esa plataforma (normalmente utilizando el gestor de paquetes "
