--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -11,11 +11,11 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-03-23 18:50-0300\n"
+"PO-Revision-Date: 2021-10-19 15:09-0300\n"
 "Last-Translator: \n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -23,7 +23,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
 "Language: es\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../Doc/whatsnew/2.7.rst:3
 msgid "What's New in Python 2.7"
@@ -4737,8 +4737,8 @@ msgid ""
 "simple directions on how to install them on that platform (usually using the "
 "system package manager)."
 msgstr ""
-"`Como se discute en el PEP`__, los empaquetadores de plataformas pueden optar"
-"por no instalar estos comandos por defecto, siempre y cuando, cuando se "
+"`Como se discute en el PEP`__, los empaquetadores de plataformas pueden "
+"optarpor no instalar estos comandos por defecto, siempre y cuando, cuando se "
 "invoquen, proporcionen instrucciones claras y sencillas sobre cómo "
 "instalarlos en esa plataforma (normalmente utilizando el gestor de paquetes "
 "del sistema)."
