--- a/c-api/datetime.po
+++ b/c-api/datetime.po
@@ -274,7 +274,7 @@ msgstr "Retorna el micro segundo, como un int de 0 hasta 999999."
 
 #: ../Doc/c-api/datetime.rst:195 ../Doc/c-api/datetime.rst:224
 msgid "Return the tzinfo (which may be ``None``)."
-msgstr "Retorna el tzinfo (que puede ser ``Ninguno``)."
+msgstr "Retorna el tzinfo (que puede ser ``None``)."
 
 #: ../Doc/c-api/datetime.rst:199
 msgid ""
