--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -4738,8 +4738,8 @@ msgid ""
 "system package manager)."
 msgstr ""
 "`Como se discute en el PEP`__, los empaquetadores de plataformas pueden "
-"optar por no instalar estos comandos por defecto, siempre y cuando, cuando se "
-"invoquen, proporcionen instrucciones claras y sencillas sobre cómo "
+"optar por no instalar estos comandos por defecto, siempre y cuando, cuando "
+"se invoquen, proporcionen instrucciones claras y sencillas sobre cómo "
 "instalarlos en esa plataforma (normalmente utilizando el gestor de paquetes "
 "del sistema)."
 
