--- a/c-api/number.po
+++ b/c-api/number.po
@@ -15,8 +15,7 @@ msgstr ""
 "Last-Translator: Meta Louis-Kosmas <louiskmeta@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);n"
-"MIME-Version: 1.0\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);nMIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
@@ -378,8 +377,8 @@ msgid ""
 "The result always has exact type :class:`int`.  Previously, the result could "
 "have been an instance of a subclass of ``int``."
 msgstr ""
-"El resultado siempre tiene el tipo exacto :class:`int`. Anteriormente, el resultado podía "
-"ser una instancia de una subclase de ``int``."
+"El resultado siempre tiene el tipo exacto :class:`int`. Anteriormente, el "
+"resultado podía ser una instancia de una subclase de ``int``."
 
 #: ../Doc/c-api/number.rst:266
 msgid ""
