--- a/c-api/datetime.po
+++ b/c-api/datetime.po
@@ -15,8 +15,7 @@ msgstr ""
 "Last-Translator: Meta Louis-Kosmas <louiskmeta@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);n"
-"MIME-Version: 1.0\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);nMIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
