--- a/c-api/veryhigh.po
+++ b/c-api/veryhigh.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-01 17:38+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2021-10-20 20:30+0200\n"
+"Last-Translator: Diego Cristóbal Herreros <diecristher@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/veryhigh.rst:8
 msgid "The Very High Level Layer"
@@ -205,6 +206,11 @@ msgid ""
 "handler`. If *closeit* is true, the file is closed before "
 "``PyRun_SimpleFileExFlags()`` returns."
 msgstr ""
+"Similar a :c:func:`PyRun_SimpleStringFlags`, pero el código fuente de Python "
+"se lee desde *fp* en lugar de una cadena en memoria. *filename* debe ser el "
+"nombre del fichero, se decodifica desde :term:`filesystem encoding and error "
+"handler`. Si *closeit* es verdadero, el fichero se cierra antes de que "
+"``PyRun_SimpleFileExFlags()`` retorne."
 
 #: ../Doc/c-api/veryhigh.rst:120
 msgid ""
@@ -392,6 +398,11 @@ msgid ""
 "handler`. If *closeit* is true, the file is closed before :c:func:"
 "`PyRun_FileExFlags` returns."
 msgstr ""
+"Similar a :c:func:`PyRun_StringFlags`, pero el código fuente de Python se "
+"lee de *fp* en lugar de una cadena en memoria. *filename* debe ser el nombre "
+"del fichero, es decodificado desde el :term:`filesystem encoding and error "
+"handler`. Si *closeit* es verdadero, el fichero se cierra antes de que :c:"
+"func:`PyRun_FileExFlags` retorne."
 
 #: ../Doc/c-api/veryhigh.rst:235
 msgid ""
