--- a/c-api/number.po
+++ b/c-api/number.po
@@ -11,15 +11,15 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2020-05-18 15:35+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2021-10-19 02:00+0200\n"
+"Last-Translator: Meta Louis-Kosmas <louiskmeta@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"MIME-Version: 1.0\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);nMIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/number.rst:6
 msgid "Number Protocol"
@@ -377,6 +377,8 @@ msgid ""
 "The result always has exact type :class:`int`.  Previously, the result could "
 "have been an instance of a subclass of ``int``."
 msgstr ""
+"El resultado siempre tiene el tipo exacto :class:`int`. Anteriormente, el "
+"resultado podía ser una instancia de una subclase de ``int``."
 
 #: ../Doc/c-api/number.rst:266
 msgid ""
