Apply suggestions from code review
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/tutorial/controlflow.po
+++ b/tutorial/controlflow.po
@@ -331,7 +331,7 @@ msgid ""
 "which makes it conceptually similar to the unpacking assignment ``(x, y) = "
 "point``."
 msgstr ""
-"Observa éste con cuidado! El primer patrón tiene dos literales y puede "
+"¡Observa éste con cuidado! El primer patrón tiene dos literales y puede "
 "considerarse una extensión del patrón literal que se mostró anteriormente. "
 "Pero los siguientes dos patrones combinan un literal y una variable, y la "
 "variable *liga* uno de los elementos del sujeto (``point``). El cuarto "
@@ -387,7 +387,7 @@ msgid ""
 "Patterns can be arbitrarily nested.  For example, if we have a short list of "
 "points, we could match it like this::"
 msgstr ""
-"Los patrones pueden anidarse arbitrariamente. Por ejemplo, si tuvieramos una "
+"Los patrones pueden anidarse arbitrariamente. Por ejemplo, si tuviéramos una "
 "lista corta de puntos, podríamos aplicar match así::"
 
 #: ../Doc/tutorial/controlflow.rst:357
@@ -436,8 +436,8 @@ msgid ""
 "sequence patterns, extra keys are ignored.  An unpacking like ``**rest`` is "
 "also supported.  (But ``**_`` would be redundant, so it not allowed.)"
 msgstr ""
-"Los patrones de mapeo: ``{\"capacidad\": c, \"latencia\": l}`` capturan los "
-"valores ``\"capacidad\"`` y ``\"latencia\"`` de un diccionario.  A "
+"Los patrones de mapeo: ``{\"ancho de banda\": c, \"latencia\": l}`` capturan los "
+"valores ``\"ancho de banda\"`` y ``\"latencia\"`` de un diccionario.  A "
 "diferencia de los patrones de sequencia, las claves adicionales en el sujeto "
 "son ignoradas.  Puede usarse un desempaquetado como ``**rest`` .  (Aunque "
 "``**_`` sería redundante, con lo cual no está permitido)"
