Translation c-api init.po

--- a/c-api/init.po
+++ b/c-api/init.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-02 02:04+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2021-10-21 00:37-0300\n"
+"Last-Translator: CatalinaArrey <CatalinaArreyA@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/init.rst:8
 msgid "Initialization, Finalization, and Threads"
@@ -345,6 +346,10 @@ msgid ""
 "handler, instead of the UTF-8 encoding with ``surrogatepass`` error handler, "
 "for the :term:`filesystem encoding and error handler`."
 msgstr ""
+"Si la bandera no es cero, utilice la codificación ``mbcs`` con el gestor de "
+"errores ``replace`` en lugar de la codificación UTF-8 con el gestor de error "
+"``surrogatepass``, para la :term:`codificación del sistema de archivos y "
+"gestor de errores`."
 
 #: ../Doc/c-api/init.rst:158
 msgid ""
@@ -715,20 +720,20 @@ msgstr ""
 #: ../Doc/c-api/init.rst:379 ../Doc/c-api/init.rst:398
 #: ../Doc/c-api/init.rst:439 ../Doc/c-api/init.rst:458
 #: ../Doc/c-api/init.rst:482 ../Doc/c-api/init.rst:671
-#, fuzzy
 msgid ""
 "This function should not be called before :c:func:`Py_Initialize`, otherwise "
 "it returns ``NULL``."
-msgstr "Esta función ya no se puede llamar antes de :c:func:`Py_Initialize()`."
+msgstr ""
+"Esta función ya no se puede llamar antes de :c:func:`Py_Initialize()`, de "
+"otra forma retornará ``NULL``."
 
 #: ../Doc/c-api/init.rst:382 ../Doc/c-api/init.rst:401
 #: ../Doc/c-api/init.rst:442 ../Doc/c-api/init.rst:461
 #: ../Doc/c-api/init.rst:487 ../Doc/c-api/init.rst:674
-#, fuzzy
 msgid "It now returns ``NULL`` if called before :c:func:`Py_Initialize`."
 msgstr ""
 "Todas las siguientes funciones deben llamarse después de :c:func:"
-"`Py_Initialize`."
+"`Py_Initialize`, de lo contrario retornará ``NULL``."
 
 #: ../Doc/c-api/init.rst:388
 msgid ""
@@ -849,7 +854,6 @@ msgstr ""
 "valor está disponible para el código de Python como ``sys.executable``."
 
 #: ../Doc/c-api/init.rst:472
-#, fuzzy
 msgid ""
 "Return the default module search path; this is computed from the program "
 "name (set by :c:func:`Py_SetProgramName` above) and some environment "
@@ -863,17 +867,17 @@ msgid ""
 msgstr ""
 "Retorna la ruta de búsqueda del módulo predeterminado; esto se calcula a "
 "partir del nombre del programa (establecido por :c:func:`Py_SetProgramName` "
-"arriba) y algunas variables de entorno. La cadena de caracteres retornada "
-"consta de una serie de nombres de directorio separados por un carácter "
-"delimitador dependiente de la plataforma. El carácter delimitador es ``':'`` "
-"en Unix y Mac OS X, ``';'`` en Windows. La cadena de caracteres retornada "
-"apunta al almacenamiento estático; la persona que llama no debe modificar su "
-"valor. La lista :data:`sys.path` se inicializa con este valor en el inicio "
-"del intérprete; se puede modificar (y generalmente se modifica) más adelante "
-"para cambiar la ruta de búsqueda para cargar módulos."
+"antes mencionado) y algunas variables de entorno. La cadena de caracteres "
+"retornada consiste en una serie de nombres de directorio separados por un "
+"carácter delimitador dependiente de la plataforma. El carácter delimitador "
+"es ``':'`` en Unix y macOS, ``';'`` en Windows. La cadena de caracteres "
+"retornada apunta al almacenamiento estático; la persona que llama no debe "
+"modificar su valor. La lista :data:`sys.path` se inicializa con este valor "
+"en el inicio del intérprete; se puede (y generalmente se realiza) modificar "
+"más adelante para cambiar la ruta de búsqueda para cargar módulos."
 
+# Actualmente se está usando el sistema operativo macOS, mientras que Mac OS X es un versión más antigua de la misma.
 #: ../Doc/c-api/init.rst:498
-#, fuzzy
 msgid ""
 "Set the default module search path.  If this function is called before :c:"
 "func:`Py_Initialize`, then :c:func:`Py_GetPath` won't attempt to compute a "
@@ -885,12 +889,12 @@ msgid ""
 msgstr ""
 "Establece la ruta de búsqueda del módulo predeterminado. Si se llama a esta "
 "función antes de :c:func:`Py_Initialize`, entonces :c:func:`Py_GetPath` no "
-"intentará calcular una ruta de búsqueda predeterminada, sino que utilizará "
+"intentará computar una ruta de búsqueda predeterminada, sino que utilizará "
 "la proporcionada en su lugar. Esto es útil si Python está incrustado por una "
 "aplicación que tiene pleno conocimiento de la ubicación de todos los "
 "módulos. Los componentes de la ruta deben estar separados por el carácter "
-"delimitador dependiente de la plataforma, que es ``':'`` en Unix y Mac OS X, "
-"``';'`` en Windows."
+"delimitador dependiente de la plataforma, el cual es ``':'`` en Unix y "
+"macOS, ``';'`` en Windows."
 
 #: ../Doc/c-api/init.rst:506
 msgid ""
@@ -944,7 +948,6 @@ msgstr ""
 "valor está disponible para el código Python como :data:`sys.version`."
 
 #: ../Doc/c-api/init.rst:541
-#, fuzzy
 msgid ""
 "Return the platform identifier for the current platform.  On Unix, this is "
 "formed from the \"official\" name of the operating system, converted to "
@@ -958,10 +961,10 @@ msgstr ""
 "esto se forma a partir del nombre \"oficial\" del sistema operativo, "
 "convertido a minúsculas, seguido del número de revisión principal; por "
 "ejemplo, para Solaris 2.x, que también se conoce como SunOS 5.x, el valor es "
-"``'sunos5'``. En Mac OS X, es `` 'darwin'``. En Windows, es ``'win'``. La "
-"cadena de caracteres apunta al almacenamiento estático; la persona que llama "
-"no debe modificar su valor. El valor está disponible para el código de "
-"Python como ``sys.platform``."
+"``'sunos5'``. En macOS, es `` 'darwin'``. En Windows, es ``'win'``. La "
+"cadena de caracteres retornada apunta al almacenamiento estático; la persona "
+"que llama no debe modificar su valor. El valor está disponible para el "
+"código de Python como ``sys.platform``."
 
 #: ../Doc/c-api/init.rst:552
 msgid ""
@@ -1805,14 +1808,14 @@ msgstr ""
 msgid "Get the current frame of the Python thread state *tstate*."
 msgstr "Obtiene el marco actual del estado del hilo de Python *tstate*."
 
+# Como bien tradujeron con anterioridad, está más claro el decir referencia sólida a referencia fuerte, el cual no calzaría en este contexto.
 #: ../Doc/c-api/init.rst:1116
-#, fuzzy
 msgid ""
 "Return a :term:`strong reference`. Return ``NULL`` if no frame is currently "
 "executing."
 msgstr ""
-"Retorna una referencia sólida. Retorna ``NULL`` si no se está ejecutando "
-"ningún marco."
+"Retorna una :term:`referencia sólida`. Retorna ``NULL`` si no se está "
+"ejecutando ningún cuadro."
 
 #: ../Doc/c-api/init.rst:1119
 msgid "See also :c:func:`PyEval_GetFrame`."
