--- a/c-api/datetime.po
+++ b/c-api/datetime.po
@@ -11,15 +11,15 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-01 20:34+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2021-10-19 02:00+0200\n"
+"Last-Translator: Meta Louis-Kosmas <louiskmeta@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"MIME-Version: 1.0\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);nMIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/datetime.rst:6
 msgid "DateTime Objects"
@@ -273,7 +273,7 @@ msgstr "Retorna el micro segundo, como un int de 0 hasta 999999."
 
 #: ../Doc/c-api/datetime.rst:195 ../Doc/c-api/datetime.rst:224
 msgid "Return the tzinfo (which may be ``None``)."
-msgstr ""
+msgstr "Retorna el tzinfo (que puede ser ``None``)."
 
 #: ../Doc/c-api/datetime.rst:199
 msgid ""
