--- a/using/configure.po
+++ b/using/configure.po
@@ -4,31 +4,33 @@
 # package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python en Español 3.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2021-10-21 14:50-0300\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: es\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/using/configure.rst:3
 msgid "Configure Python"
-msgstr ""
+msgstr "Configurar Python"
 
 #: ../Doc/using/configure.rst:8
 msgid "Configure Options"
-msgstr ""
+msgstr "Configurar opciones"
 
 #: ../Doc/using/configure.rst:10
 msgid "List all ``./configure`` script options using::"
-msgstr ""
+msgstr "Enumerar todas las opciones del script ``./configure`` usando::"
 
 #: ../Doc/using/configure.rst:14
 msgid ""
@@ -38,7 +40,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:17
 msgid "General Options"
-msgstr ""
+msgstr "Opciones generales"
 
 #: ../Doc/using/configure.rst:21
 msgid ""
