--- a/howto/annotations.po
+++ b/howto/annotations.po
@@ -287,7 +287,7 @@ msgid ""
 "have found the root unwrapped function."
 msgstr ""
 "Si ``o`` es un invocable envuelto usando :func:`functools.update_wrapper`, :"
-"func:`functools.wraps` o :func:`functools.partial`, desenvuélvalo "
+"func:`functools.wraps` o :func:`functools.partial`, lo desenvuelve "
 "iterativamente accediendo a ``o.__wrapped__`` o ``o.func`` según "
 "corresponda, hasta que haya encontrado la función raíz sin envolver."
 
